# python-sdk

./: README.md  pyproject.toml
hisend/: __init__.py  client.py  models.py  webhooks.py
hisend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hisend/resources/: domains.py  emails.py  routing.py  threads.py
tests/: test_client.py
