[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hisend"
version = "1.2.0"
description = "Official Python SDK for Hisend"
readme = "README.md"
authors = [
  { name="Hisend", email="support@hisend.app" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://hisend.app"
